WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
193369
Fix style CFNetworkSPI style checker warnings from
r239698
https://bugs.webkit.org/show_bug.cgi?id=193369
Summary
Fix style CFNetworkSPI style checker warnings from r239698
Devin Rousso
Reported
2019-01-11 15:11:05 PST
<
https://webkit.org/b/191539#c36
>: ERROR: Source/WebCore/PAL/pal/spi/cf/CFNetworkSPI.h:214: Misplaced OS version check. Please use a named macro in wtf/Platform.h or wtf/FeatureDefines.h. [build/version_check] [5] ERROR: Source/WebKit/NetworkProcess/cocoa/NetworkSessionCocoa.mm:94: Misplaced OS version check. Please use a named macro in wtf/Platform.h or wtf/FeatureDefines.h. [build/version_check] [5] ERROR: Source/WebKit/NetworkProcess/cocoa/NetworkSessionCocoa.mm:134: Non-label code inside switch statements should be indented. [whitespace/indent] [4] ERROR: Source/WebKit/NetworkProcess/cocoa/NetworkSessionCocoa.mm:661: Misplaced OS version check. Please use a named macro in wtf/Platform.h or wtf/FeatureDefines.h. [build/version_check] [5]
Attachments
Patch
(4.94 KB, patch)
2019-01-11 15:12 PST
,
Devin Rousso
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Devin Rousso
Comment 1
2019-01-11 15:12:53 PST
Created
attachment 358954
[details]
Patch
Joseph Pecoraro
Comment 2
2019-01-11 15:24:16 PST
Comment on
attachment 358954
[details]
Patch r=me
WebKit Commit Bot
Comment 3
2019-01-11 16:40:20 PST
Comment on
attachment 358954
[details]
Patch Clearing flags on attachment: 358954 Committed
r239884
: <
https://trac.webkit.org/changeset/239884
>
WebKit Commit Bot
Comment 4
2019-01-11 16:40:22 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2019-01-11 16:41:28 PST
<
rdar://problem/47224762
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug