Fix style CFNetworkSPI style checker warnings from r239698 https://bugs.webkit.org/show_bug.cgi?id=193369

Reviewed by Joseph Pecoraro.

Source/WebCore/PAL:

* pal/spi/cf/CFNetworkSPI.h:

Source/WebKit:

* NetworkProcess/cocoa/NetworkSessionCocoa.mm:
(-[WKNetworkSessionDelegate URLSession:task:didFinishCollectingMetrics:]):

Source/WTF:

* wtf/Platform.h:


Canonical link: https://commits.webkit.org/207868@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@239884 268f45cc-cd09-0410-ab3c-d52691b4dbfc